# cpplib-starter

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  annotated.html  classes.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_672662c7f5c30af7e50f50a34b6f9200.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  index.html  structcpplib_1_1Vector2-members.html  structcpplib_1_1Vector2.html  vcpkg.json  vector2_8hpp_source.html
.github/workflows/: macos.yml  ubuntu.yml  windows-test.yml  windows.yml
cmake/: Doxygen.cmake
docs/: Doxyfile  Doxyfile.in  overview.md
example/: CMakeLists.txt  main.cpp
include/cpplib/: vec2.hpp  vector2.hpp
scripts/: gendocs.bat  install.sh
search/: all_0.js  all_3.js  all_5.js  all_6.js  all_7.js  classes_0.js  functions_0.js  functions_1.js  pages_1.js  pages_2.js  pages_4.js  searchdata.js  variables_1.js
src/: CMakeLists.txt  math.cpp  math.hpp  vec2.cpp  vector2.cpp
src/utils/: sqrt.cpp  sqrt.hpp
tests/: CMakeLists.txt  math_tests.cpp  sqrt_test.cpp  vec2_test.cpp  vector2_tests.cpp
